# boss

./: .cproject  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README_de.md  boss-3.2.kdev4  config.h  config.h.in  config.status  configure  configure.ac  doxygen.cfg  libtool
autom4te.cache/: output.0  requests  traces.0
libraries/: Makefile  Makefile.am  Makefile.in  README
libraries/boss_cartreader/: Makefile  Makefile.am  Makefile.in  boss_cartreader.cpp  boss_cartreader.h
libraries/boss_conman/: Makefile  Makefile.am  Makefile.in  boss_concat.cpp  boss_concat.h  boss_conman.h  concat_unit.cpp  concat_unit.h  conman_unit.cpp  conman_unit.h
libraries/boss_conman/.deps/: boss_concat.Plo  concat_unit.Plo  conman_unit.Plo
libraries/boss_context/: Makefile  Makefile.am  Makefile.in  boss_context.cpp  boss_context.h  main.cpp
libraries/boss_context/.deps/: boss_context.Plo  main.Po
libraries/boss_cscomm/: Makefile  Makefile.am  Makefile.in  boss_cscomm.cpp  boss_cscomm.h
libraries/boss_duration/: Makefile  Makefile.am  Makefile.in  boss_duration.cpp  boss_duration.h  boss_duration_de.cpp  boss_duration_de.h
libraries/boss_duration/.deps/: boss_duration.Plo  boss_duration_de.Plo
libraries/boss_g2p/: Makefile  Makefile.am  Makefile.in  boss_g2p.cpp  boss_g2p.h  boss_g2p_de.cpp  boss_g2p_de.h  main.cpp
libraries/boss_g2p/.deps/: boss_g2p.Plo  boss_g2p_de.Plo  main.Po
libraries/boss_intonation/: Makefile  Makefile.am  Makefile.in  boss_intonation.h  boss_intonation_de.cpp  boss_intonation_de.h  boss_nn.cpp  boss_nn.h
libraries/boss_mysql/: Makefile  Makefile.am  Makefile.in  boss_mysql_exceptions.cpp  boss_mysql_exceptions.h  boss_mysql_handler.cpp  boss_mysql_handler.h  boss_mysql_result.cpp  boss_mysql_result.h
libraries/boss_mysql/.deps/: boss_mysql_exceptions.Plo  boss_mysql_handler.Plo  boss_mysql_result.Plo
libraries/boss_numbers/: Makefile  Makefile.am  Makefile.in  boss_numbers.cpp  boss_numbers.h  main.cpp  nominal.cpp  nominal.h  ordinal.cpp  ordinal.h
libraries/boss_numbers/.deps/: boss_numbers.Plo  main.Po  nominal.Plo  ordinal.Plo
libraries/boss_transcription/: Makefile  Makefile.am  Makefile.in  boss_morphemes_de.cpp  boss_morphemes_de.h  boss_morphtree.cpp  boss_morphtree.h  boss_transcription.cpp  boss_transcription.h  boss_transcription_de.cpp  boss_transcription_de.h  boss_transcription_uk.cpp  boss_transcription_uk.h  main.cpp
libraries/boss_transcription/.deps/: boss_morphemes_de.Plo  boss_morphtree.Plo  boss_transcription.Plo  boss_transcription_de.Plo  boss_transcription_uk.Plo  main.Po
libraries/boss_unitselection/: Makefile  Makefile.am  Makefile.in  boss_node.cpp  boss_node.h  boss_node_de.cpp  boss_node_de.h  boss_unitselection.cpp  boss_unitselection.h  cost.h  cost_de.cpp  cost_de.h  factory.cpp  factory.h  factory_de.cpp  factory_de.h  unit_level.cpp  unit_level.h
libraries/boss_unitselection/.deps/: boss_node.Plo  boss_node_de.Plo  boss_unitselection.Plo  cost_de.Plo  factory.Plo  factory_de.Plo  unit_level.Plo
libraries/boss_utility/: Makefile  Makefile.am  Makefile.in  boss_config.cpp  boss_config.h  boss_exceptions.h  boss_fsa.cpp  boss_fsa.h  boss_module.h  boss_optitem.h  boss_types.cpp  boss_types.h  boss_utility.cpp  boss_utility.h  commandline.cpp  commandline.h  dom_tools.cpp  dom_tools.cpp.current  dom_tools.h  dom_tools.h.current  dom_userdata.cpp  dom_userdata.h
libraries/boss_utility/.deps/: boss_config.Plo  boss_fsa.Plo  boss_types.Plo  boss_utility.Plo  commandline.Plo  dom_tools.Plo  dom_userdata.Plo
libraries/phimbl/: Makefile  Makefile.am  Makefile.in  phimbl.cpp  phimbl.h
libraries/preproc/: Makefile  Makefile.am  Makefile.in  PPFnclst.cc  PPFuncts.cc  PPFuncts.h  PPInput.cc  PPInput.h  PPScannerTest.cc  README  Rules.lst  preproc.cc
libraries/preproc/.deps/: PPAbblst.Plo  PPCConte.Plo  PPCStrin.Plo  PPCtglst.Plo  PPCtgstr.Plo  PPFnclst.Plo  PPFuncts.Plo  PPInput.Plo  PPRlchls.Plo  PPRulchr.Plo  PPRule.Plo  PPRullst.Plo
libraries/tdsp/: #dsp_matrix.h#  #dsp_vector.cpp#  Makefile  Makefile.am  Makefile.in  dsp_convolution.cpp  dsp_convolution.h  dsp_distances.cpp  dsp_distances.h  dsp_dtw.cpp  dsp_dtw.h  dsp_exceptions.cpp  dsp_exceptions.h  dsp_fft.cpp  dsp_fft.h  dsp_line.cpp  dsp_line.h  dsp_matrix.cpp  dsp_matrix.h  dsp_melcep.cpp  dsp_melcep.h  dsp_short_time.cpp  dsp_short_time.h  dsp_vector.h  dsp_weight_window.cpp  dsp_weight_window.h
libraries/tdsp/.deps/: dsp_exceptions.Plo  dsp_weight_window.Plo
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
synthesis/: Makefile  Makefile.am  Makefile.in  README
synthesis/boss_client/: ClientXMLDocument.cpp  ClientXMLDocument.h  InputScanner.h  Makefile  Makefile.am  Makefile.in  PreprocScanner.cpp  PreprocScanner.h  Token.h  abbrev.cpp  abbrev.h  boss_client.cpp  boss_client.h  boss_client_de  boss_scanner.l++  boss_scannertags.h
synthesis/boss_client/.deps/: ClientXMLDocument.Po  PreprocScanner.Po  boss_client.Po
synthesis/boss_server/: Makefile  Makefile.am  Makefile.in  boss_synthesis.cpp  boss_synthesis.h  main.cpp
synthesis/boss_server/.deps/: boss_synthesis.Po  main.Po
tests/: Makefile.am
tests/moduletest/: Makefile.am  moduletest.cpp  moduletest.h
tools/: Makefile  Makefile.am  Makefile.in  README
tools/addcontext/: Makefile  Makefile.am  Makefile.in  main.cpp
tools/addf0/: Makefile  Makefile.am  Makefile.in  main.cpp
tools/addhp/: Makefile  Makefile.am  Makefile.in  main.cpp
tools/addphrases/: Makefile  Makefile.am  Makefile.in  main.cpp
tools/blf2xml/: Makefile  Makefile.am  Makefile.in  main.cpp  phoneentry.cpp  phoneentry.h  sentenceentry.cpp  sentenceentry.h  syllableentry.cpp  syllableentry.h  wordentry.cpp  wordentry.h
tools/blf2xml/.deps/: main.Po  phoneentry.Po  sentenceentry.Po  syllableentry.Po  wordentry.Po
tools/traing2p/: Makefile  Makefile.am  Makefile.in  boss_g2pmatrix.cpp  boss_g2pmatrix.h  main.cpp  traing2p.cpp  traing2p.h
tools/traing2p/.deps/: boss_g2pmatrix.Po  main.Po  traing2p.Po
(+32 files in other folders)
