lib_LTLIBRARIES = libpreproc.la
libpreproc_la_SOURCES = PPAbblst.cc PPAbblst.h \
PPCConte.cc PPCConte.h \
PPCStrin.cc PPCStrin.h \
PPCtglst.cc PPCtglst.h \
PPCtgstr.cc PPCtgstr.h \
PPdebug.h \
PPFnclst.cc PPFnclst.h \
PPFuncts.cc PPFuncts.h \
PPInput.cc PPInput.h \
PPRlchls.cc PPRlchls.h \
PPRulchr.cc PPRulchr.h \
PPRule.cc PPRule.h \
PPRullst.cc PPRullst.h

AM_CPPFLAGS = -I..

