lib_LTLIBRARIES = libtdsp.la
##libtdsp_la_SOURCES = dsp_convolution.cpp dsp_convolution.h dsp_exceptions.cpp dsp_exceptions.h dsp_matrix.cpp dsp_matrix.h dsp_vector.cpp dsp_vector.h dsp_distances.cpp dsp_distances.h dsp_fft.cpp dsp_fft.h dsp_melcep.cpp dsp_melcep.h dsp_weight_window.cpp dsp_weight_window.h dsp_dtw.cpp dsp_dtw.h dsp_line.cpp dsp_line.h dsp_short_time.cpp dsp_short_time.h
libtdsp_la_SOURCES = dsp_exceptions.cpp dsp_exceptions.h dsp_weight_window.cpp dsp_weight_window.h 
libtdsp_la_LDFLAGS = -no-undefined 
AM_CPPFLAGS = -I..

tdsp_includedir=$(includedir)/tdsp
tdsp_include_HEADERS = dsp_convolution.h dsp_convolution.cpp dsp_distances.h dsp_distances.cpp \
											dsp_dtw.h dsp_dtw.cpp dsp_exceptions.h dsp_exceptions.cpp dsp_fft.h dsp_fft.cpp \
											dsp_line.h dsp_line.cpp dsp_matrix.h dsp_matrix.cpp dsp_melcep.h dsp_melcep.cpp \
											dsp_short_time.h dsp_short_time.cpp dsp_vector.h dsp_vector.cpp \
		       						dsp_weight_window.h dsp_weight_window.cpp

