bin_PROGRAMS = boss_client
bin_SCRIPTS = boss_client_de
boss_client_SOURCES = PreprocScanner.cpp ClientXMLDocument.cpp boss_client.cpp 
boss_client_LDADD = ../../libraries/boss_utility/libbossutility.la ../../libraries/boss_cscomm/libbosscscomm.la ../../libraries/boss_numbers/libbossnumbers.la ../../libraries/preproc/libpreproc.la @LIB_PCRE@
AM_CPPFLAGS = -I../../libraries
