bin_PROGRAMS = blf2xml
blf2xml_SOURCES = main.cpp phoneentry.cpp phoneentry.h sentenceentry.cpp sentenceentry.h syllableentry.cpp syllableentry.h wordentry.cpp wordentry.h
LDADD = ../../libraries/boss_utility/libbossutility.la ../../libraries/boss_mysql/libbossmysql.la @LIB_XERCES_C@ @LIB_PCRE@
AM_CPPFLAGS = -I../../libraries
