bin_PROGRAMS = traing2p
traing2p_SOURCES = main.cpp traing2p.cpp traing2p.h boss_g2pmatrix.cpp boss_g2pmatrix.h
LDADD =  ../../libraries/boss_g2p/libbossg2pde.la ../../libraries/boss_utility/libbossutility.la ../../libraries/phimbl/libphimbl.la ../../libraries/tdsp/libtdsp.la ../../libraries/boss_mysql/libbossmysql.la @LIB_XERCES_C@ @LIB_PTHREAD@  @LIB_PCRE@
AM_CPPFLAGS = -I../../libraries

